[tool.poetry]
name = "health"
version = "0.1.0"
description = ""
authors = ["bageljr <aryanagarwal897@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
